# retail_lakehouse_migration_and_conversational_query_assistant

./: .dockerignore  .env.example  Dockerfile.backend  architecture.html  docker-compose.yml  readme.md  requirements.txt
agent/: audit.py  memory.py
agent/tools/: audit_query.py  commit_conflict.py  explain_query.py  lakehouse_query.py  time_travel.py
api_backend/: guard.py  logger.py  main.py
data/: generate_data.py  generate_delta_batches.py
eval/: eval_cases.example  eval_runner.py
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  atoms.ts  index.css  main.tsx
frontend/src/components/: ChatWindow.tsx  LogsPanel.tsx  chatInput.tsx  chatwindow.tsx
frontend/src/hooks/: useChat.ts
governance/: masking.py  policy.rego
marquez/: config.yml  entrypoint.sh
my_project/: pyproject.toml
postgres/: init.sh
spark_jobs/: audit_trail.py  concurrent_conflict.py  create_tables.py  ingest.py  ingest_delta.py  prove_pruning.py  schema_evolution.py  seed_conflicts.py  spark_session.py  time_travel.py
