[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.112.0",
    "chromadb>=1.5.9",
    "dbt-spark>=1.10.3",
    "fastapi>=0.138.1",
    "great-expectations>=1.18.2",
    "openlineage-python>=1.50.0",
    "pyiceberg[spark]>=0.11.1",
    "pyspark>=4.1.2",
    "pytest>=9.1.1",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
    "sqlglot>=30.12.0",
    "uvicorn>=0.49.0",
]
