[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.112.0",
    "chromadb>=1.5.9",
    "dbt-spark>=1.10.3",
    "fastapi>=0.138.1",
    "google-generativeai>=0.8.6",
    "great-expectations>=1.18.2",
    "groq>=1.5.0",
    "openlineage-python>=1.50.0",
    "pyiceberg[spark]>=0.11.1",
    "pyspark==3.5.1",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
    "sqlglot>=30.12.0",
    "uvicorn>=0.49.0",
]
